<resources>
    <string name="app_name">Mapudungún</string>
    <string name="boton_diccionario">Diccionario</string>
    <string name="boton_categorias">Categorías</string>
    <string name="titulo_act_principal">Mapudungún</string>
    <string name="titulo_act_categorias">Categorías</string>
    <string name="titulo_act_abecedario">Diccionario</string>
    <string name="sub_tit_act_abecedario">letra</string>
    <string name="img_banner_top">imagenBannerTop</string>
    <string name="img_banner_bottom">imagenBannerBottom</string>
    <string name="texto_mensajes">No existen palabras con esta letra\n</string>
    <string name="info_texto">
        Desarrollado por: <b> Germán Riveros Sepúlveda. </b> \n
    </string>
    <string name="TitCatNum">Números</string>
    <string name="TextoNumeros"><b>1 Kiñe: </b> uno
        \n<b>2 Epu:  </b> dos
        \n<b>3 Küla: </b> tres
        \n<b>4 Meli: </b> cuatro
        \n<b>5 Kechu: </b> cinco
        \n<b>6 Kayu: </b> seis
        \n<b>7 Regle: </b> siete
        \n<b>8 Pura: </b> ocho
        \n<b>9 Aylla: </b> nueve
        \n<b>10 Mari: </b> diez
        \n<b>100 Pataka: </b> cien
        \n<b>1000 Waranga: </b> mil
    </string>
    <string name="TitCatPron">Pronunciación</string>
    <string name="TextoPronunciacion"><b>A:</b> como la <b> a</b> española.\n<b>Ch:</b> como la <b>
        ch  </b> española.\n<b>D: </b> como la <b> z  </b> española, ausente en el castellano de
        Chile. En algunas zonas se realiza como la <b> d </b> del español, pero con la punta de la
        lengua entre los dientes.\n<b>E:</b> como la <b> e </b> española \n<b>F:</b> como la <b> f
        </b> española. En algunas zonas se realiza como una <b> y </b>, es decir, labiodental.
        \n<b>G:</b> como la <b> g </b> española que se encuentra entre vocales, menos marcada.
        \n<b>I:</b> como la <b> i </b> española. Cuando el sonido \"i\" finaliza un diptongo, se
        utiliza el \"y\". Ejemplo: felei, y no felei. \n<b>K:</b> como la <b> c </b> española, antes
        de <i>a, o, u,</i> o como la <b> q </b> antes de <i>e, i</i>. \n<b>L:</b> como la <b> l </b>
        española. \n<b>Ll:</b> como la <b> ll </b> del español de Castilla. En algunas zonas rurales
        del sur de Chile se conserva y se distingue de la <b> y</b>.\n<b>M:</b> como la <b> m </b>
        española. \n<b>N:</b> como la <b> n </b> española. \n<b>Ñ:</b> como la <b> ñ </b> española.
        \n<b>Ng:</b> corresponde a un solo sonido que se articula con la lengua en el velo del
        paladar (un poco más atrás que la <i>ñ</i>). No equivale a <b>n + g</b> españolas.\n<b>O:</b>
        como la <b> o </b> española. \n<b>P:</b> como la <b> p </b> española.\n<b>R:</b> como una
        <b> r </b> simple, pero con la punta de la lengua doblada hacia atrás. Muy parecida a la
        <b> r </b> del inglés. Nunca será como la doble <b>r </b> del español.\n<b>S:</b> muy
        parecida a la del español, aunque con mayor tensión y articulada con la punta de los dientes
        contra los alvéolos. \n<b>T:</b> muy parecida a la del español, aunque un poco más atrás
        (alvéolos en lugar de dientes). \n<b>Tr:</b> corresponde a un sonido que se articula como el
        grupo <b>tr</b> en el español coloquial de Chile. No equivale a <b>t + r</b> españolas.
        \n<b>U:</b> como la <b> u </b> española. Cuando el sonido \"u\" finaliza un diptongo, se
        utiliza el \"w\". Ejemplo: <i>fewla y no feula</i>. \n<b>Ü:</b> como la <b> u </b> española,
        pero con los labios estirados como cuando se articula una <i>i</i>. \n<b>W:</b> como la
        <b> w </b> del inglés. Semejante a la pronunciación de los diptongos que comienzan con
        <b>u </b> del español. Después de una vocal acentuada se pronuncia como <b> i</b>.
        \n<b>Y:</b> cuando antecede a una vocal suena como la <b> y </b> española, aunque más suave.
         Después de vocal acentuada se pronuncia como la <b> u</b> española.\n<b>Sh:</b> en algunas
        ocaciones aparece una letra <b>sh</b> supernumeraria que se utiliza para marcar el tono
        afectivo o cariñoso. Suena como una <b> ch</b> más fricativa (arrastrada).\n
    </string>
    <string name="TitCatPronombre">Pronombres</string>
    <string name="TextoPronombres"><b>PERSONALES</b>
        \n\t<i>Simples:</i>
        \n\t\t<b>Inche:</b> yo
        \n\t\t<b>Eymi:</b> tu
        \n\t\t<b>Fey:</b> el
        \n\t<i>Duales:</i>
        \n\t\t<b>Inchiw:</b> nosotros dos
        \n\t\t<b>Eymu:</b> ustedes dos
        \n\t\t<b>Feyengu:</b> ellos dos
        \n\t<i>Plurales:</i>
        \n\t\t<b>Inchiñ:</b> nosotros (todos)
        \n\t\t<b>Eymün:</b> ustedes (todos)
        \n\t\t<b>Feyengün:</b> ellos (todos)
        \n\n<b>POSESIVOS</b>\n\t<i>Simples:</i>
        \n\t\t<b>Tañi:</b> mi (yo)
        \n\t\t<b>Tami:</b> tu (tu)
        \n\t\t<b>Tañi:</b> su (el)
        \n\t<i>Duales:</i>
        \n\t\t<b>Tayu:</b> nuestro (nosotros dos)
        \n\t\t<b>Tamu:</b> vuestro (ustedes dos)
        \n\t\t<b>Tañi:</b> su (ellos dos)
        \n\t<i>Plurales:</i>
        \n\t\t<b>Taiñ:</b> nuestro (nosotros)
        \n\t\t<b>Tamün:</b> vuestro (ustedes)
        \n\t\t<b>Tañi:</b> su (ellos)
        \n\n<b>DEMOSTRATIVOS</b>
        \n\t<b>Tüfa/ Tüfachi:</b> este, esta, esto
        \n\t<b>Ta tüfa:</b> este es, esta es, esto es
        \n\t<b>Tüfey/ tüfeychi/ feychi/ feytachi:</b> ese, esa, eso
        \n\t<b>Ta tüfey:</b> ese es, esa es,
        eso es\n\t<b>Fey:</b> este, esta, esto, ese, esa, eso
        \n\t<b>Tiyechi:</b> aquel, aquella, aquello \n
    </string>
    <string name="TitCatSaludoDespedida">Saludo y \ndespedida</string>
    <string name="TextoSaludoDespedida"><b>CHALIWÜN (Saludar)</b>
        \n\n<i>Básico:</i>
        \n<b>Mari Mari (peñi/lamngen):</b> Buenos días hermano(a)
        \n<b>Pun May (peñi/lamngen):</b> Buenas noches hermano(a)
        \n<b>Fücha kuifi:</b> tanto tiempo (sin vernos)
        \n\n<i>Posibles preguntas:</i>
        \n<b>¿Kümelküleymi?/ ¿Kümeleymi?/ ¿Kümelekaymi?:</b> ¿estás bien?
        \n<b>¿Chumleymi?:</b> ¿cómo estás?
        \n<b>¿Tremoleymi?:</b> ¿estás bien de salud?
        \n\n<i>Posibles respuestas:</i>
        \n<b>Kümelkülen/ Kümelen / Kümelkan:</b> estoy bien
        \n<b>May:</b> si
        \n<b>Tremolen:</b> estoy bien de salud
        \n<b>Wedalkülen:</b> estoy mal
        \n<b>Kütrankülen:</b> estoy enfermo
        \n\n<b>PEWKAYALL (Despedirse)</b>\n
        \n<b>Pewkayall:</b> hasta pronto (nos veremos)
        \n<b>Pewkayall may:</b> si, hasta pronto
        \n<b>Lemorria tami pu che:</b> dale saludos a tu familia
        \n<b>Küme putuaymi tami ruca mew:</b> que llegues bien a tu casa
        \n<b>Eymi kafey:</b> tu también
        \n<b>Mañumkülen:</b> te agradezco \n
    </string>
    <string name="TitCatFrases">Frases comunes</string>
    <string name="TextoConectores"><b>RELACIONADOS AL TIEMPO</b>
        \n<b>Antü:</b> día
        \n<b>Epuwe antü doy:</b> pasado mañana
        \n<b>Epuwe antü mew:</b> anteayer
        \n<b>Fachantü:</b> hoy día, este día
        \n<b>Fewla:</b> ahora
        \n<b>Fey wüla:</b> después, hay recién
        \n<b>Konantü:</b> puesta del sol
        \n<b>Kulay:</b> hace un rato (atrás)
        \n<b>Küyen:</b> mes, luna
        \n<b>Liwen/ Pu liwen:</b> la mañana
        \n<b>Nagantü/ rupaiantü:</b> el atardecer
        \n<b>Müchay:</b> luego, pronto, más rato
        \n<b>Petu:</b> todavía, aún
        \n<b>Pun:</b> noche
        \n<b>Rangipun:</b> la medianoche
        \n<b>Rangiantü</b> el mediodía
        \n<b>Trafiya:</b> anoche
        \n<b>Tayi:</b> hace poco rato
        \n<b>Tripantu:</b> año
        \n<b>Upan:</b> después de
        \n<b>Wile:</b> mañana
        \n<b>Wiya:</b> ayer
        \n<b>Wiya trafiya:</b> antenoche
        \n<b>Wüla:</b> después
        \n<b>Wün:</b> el amanecer
        \n\n<b>RELACIONADOS AL DISCURSO</b>
        \n<b>che:</b> persona, gente, familia
        \n<b>Chem pechi:</b> cualquier cosa
        \n<b>Deu:</b> ya
        \n<b>Doy:</b> más
        \n<b>Duam:</b> necesidad, asunto, cosa, intención, recuerdo, gustar
        \n<b>Emu:</b> con (se pone al final de una frase)
        \n<b>Epe:</b> casi, ya casi
        \n<b>Feley:</b> esta bien, así es, de acuerdo
        \n<b>Felelay:</b> no es así, no se esta de acuerdo
        \n<b>Felelafuy:</b> no fue así
        \n<b>Felepe may:</b> que así sea
        \n<b>Femngechi:</b> así, así es
        \n<b>Felekeye:</b> espera un momento
        \n<b>Fey wüla:</b> ahí recien
        \n<b>Fentepuiñ:</b> llegamos hasta aquí
        \n<b>Fey mu:</b> por (de consecuencia)
        \n<b>Fey muta:</b> por eso, debido a eso
        \n<b>Fey mütem:</b> eso no más
        \n<b>Fey mew:</b> entonces, después
        \n<b>Fey nga:</b> eso pues, entonces
        \n<b>Fente:</b> es tan grande como, así tanto
        \n<b>Fentren:</b> mucho
        \n<b>Fem lu:</b> cuando
        \n<b>Fill:</b> todos, todas
        \n<b>Inaf:</b> vasto, grande, inmenso
        \n<b>Ina/ inal:</b> junto a, al lado de, a la orilla de, el último
        \n<b>Itro:</b> muy, mucho, cierto
        \n<b>Kafey:</b> también
        \n<b>Ka/ kangelu/ kakelu:</b> otro
        \n<b>Ka/ kay:</b> y
        \n<b>Kisu/ kichu:</b> solo
        \n<b>Küpa:</b> querer (de voluntad)
        \n<b>May:</b> Si
        \n<b>Mew, mu:</b> en, desde, con, sobre, en dirección (siempre va al final de la frase)
        \n<b>Mütem:</b> no mas, solamente
        \n<b>Müna:</b> muy, aunque
        \n<b>Nga:</b> pues
        \n<b>Ñewelay:</b> no queda más, no hay más
        \n<b>Ñochi:</b> despacio, tranquilo, apacible, lentamente
        \n<b>Pailla:</b> de espalda, tranquilo
        \n<b>Piel:</b> disponer, determinar, quere, voluntad, decir
        \n<b>Ponwitu:</b> adentro
        \n<b>Pu:</b> adentro, dentro de
        \n<b>Pütrü/ alü/ wera:</b> abundante, arto, mucho
        \n<b>Rangiñ:</b> la mitad, el medio
        \n<b>Re:</b> simple
        \n<b>Rüf:</b> verdad
        \n<b>Rüme/ rümeñma:</b> muy (enfatiza)/ aunque
        \n<b>Upen:</b> olvido, descuido
        \n<b>Wall:</b> alrededor, lo que esta más allá
        \n<b>Welu:</b> pero
        \n<b>Wüne:</b> primero, adelante
        \n<b>Wente:</b> sobre, arriba, encima
        \n<b>Wekun:</b> afuera
        \n<b>Wüla:</b> después
        \n<b>Yaf:</b> más de
        \n<b>Ya may:</b> esta bien \n
    </string>
    <string name="TitCatInterrogativos">Interrogativos</string>
    <string name="bnt_informacion">Información</string>
    <string name="imageButton">boton con imagen</string>
    <string name="resultado">Resultado</string>
    <string name="ingrese_un_n_mero">ingrese un número</string>
    <string name="ver">"Ver resultado "</string>
    <string name="texto_sup_numeros">También puedes ingresar un número para saber como es en Mapudungún:</string>
    <string name="banner_sup">banner superior</string>
    <string name="banner_central">Banner central</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="ene">Ñ</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
</resources>