<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Abc_Activity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/banner_sup"
            android:scaleType="fitStart"
            android:src="@mipmap/banner" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/titulo_act_abecedario"
            android:textSize="@dimen/tamano_titulo" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/banner_central"
            android:scaleType="fitEnd"
            android:src="@mipmap/banner_inferior" />

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_A"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/a" />

                <Button
                    android:id="@+id/btn_B"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/b" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_C"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/btn_D"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/d" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_E"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/e" />

                <Button
                    android:id="@+id/btn_F"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/f" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_G"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/g" />

                <Button
                    android:id="@+id/btn_H"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/h" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_I"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/i" />

                <Button
                    android:id="@+id/btn_J"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/j" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_K"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="palabrasNoDisponibles"
                    android:text="@string/k" />

                <Button
                    android:id="@+id/btn_L"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/l" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_M"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/m" />

                <Button
                    android:id="@+id/btn_N"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/n" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_Ñ"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="palabrasNoDisponibles"
                    android:text="@string/ene" />

                <Button
                    android:id="@+id/btn_O"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/o" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_P"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/p" />

                <Button
                    android:id="@+id/btn_Q"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/q" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_R"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/r" />

                <Button
                    android:id="@+id/btn_S"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/s" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_T"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/t" />

                <Button
                    android:id="@+id/btn_U"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/u" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_V"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/v" />

                <Button
                    android:id="@+id/btn_W"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="palabrasNoDisponibles"
                    android:text="@string/w" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_X"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="palabrasNoDisponibles"
                    android:text="@string/x" />

                <Button
                    android:id="@+id/btn_Y"
                    style="@style/estilo_btn_diccionario"
                    android:onClick="mostrarPalabras"
                    android:text="@string/y" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_Z"
                    style="@style/estilo_btn_diccionario_letraz"
                    android:layout_marginBottom="@dimen/margen_sup_boton"
                    android:onClick="mostrarPalabras"
                    android:text="@string/z" />


            </TableRow>

        </TableLayout>


    </ScrollView>


</LinearLayout>