<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/img_banner_top"
            android:scaleType="fitStart"
            android:src="@mipmap/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <fragment
                android:id="@+id/fragment_ads"
                android:name="cl.aquilotienes.mapudungun.AdsFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_ads" />

            <TextView
                android:id="@+id/tv_titulo_principal"
                style="@style/estilo_titulos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo_act_principal"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/img_banner_bottom"
            android:scaleType="fitEnd"
            android:src="@mipmap/banner_inferior" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_diccionario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="@dimen/margen_sup_boton"
            android:width="@dimen/ancho_boton"
            android:background="@drawable/redondear_boton"
            android:fontFamily="@font/roboto"
            android:onClick="ejecutarBotonesMain"
            android:text="@string/boton_diccionario"
            android:textColor="@color/ColorTextoBoton"
            android:textSize="@dimen/tamano_texto_boton" />

        <Button
            android:id="@+id/btn_categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:width="@dimen/ancho_boton"
            android:background="@drawable/redondear_boton_categorias"
            android:fontFamily="@font/roboto"
            android:onClick="ejecutarBotonesMain"
            android:text="@string/boton_categorias"
            android:textColor="@color/ColorTextoBoton"
            android:textSize="@dimen/tamano_texto_boton" />

        <Button
            android:id="@+id/btnInformacion"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/imageButton"
            android:drawableStart="@mipmap/logo_btn_info"
            android:fontFamily="@font/roboto"
            android:onClick="ejecutarBotonesMain"
            android:scaleType="fitEnd"
            android:text="@string/bnt_informacion"
            android:textSize="@dimen/tamano_texto_boton" />


    </FrameLayout>


</LinearLayout>