<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".PalabrasActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/img_banner_top"
            android:scaleType="fitStart"
            android:src="@mipmap/banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_tit_act_abecedario"
            android:id="@+id/tv_letra"
            android:layout_gravity="center_vertical|center"
            android:textSize="@dimen/tamano_titulo"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/img_banner_bottom"
            android:scaleType="fitEnd"
            android:src="@mipmap/banner_inferior" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lista"
            android:layout_marginLeft="@dimen/margen_izq_listv"
            android:layout_marginTop="@dimen/margen_sup_listv">
        </ListView>


    </LinearLayout>

</LinearLayout>